# beaglebone_black

./: .bausteinsicht-sync  .bbcli.yaml  .drone.yml  .gitignore  BUILDADOC_README.adoc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ReqMgmtTool.md  SECURITY.md  cliff.toml  drone_pipeline_reports.yml  sonar-project.properties  strictdoc.toml  strictdoc_config.py  test_trend.json
.claude/: settings.local.json
.claude/commands/: add-driver.md  build.md  create-issues.md  deploy.md  start_ticket.md  switch-backend.md  test.md
.github/: CODEOWNERS  bbb-ci.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bausteinsicht.yml  bbb-ci-generic.yml  bbb-ci-release.yml  (+6 more)
actions\generic-container-build/: action.yml
arch/: .buildadoc  architektur.adoc  generate_arch.py
c-lib/: Makefile
docs/: API.md  SETUP.md  implementation_plan_strictdoc.md
go-api/: go.mod
reports/: bb_dashboard.html  bb_report.json  bb_report.md  collect_results.py  generate_reports.py  requirements.json  sw_architektur.html
rust-lib/: Cargo.toml
rust-lib/src/: bme280.rs  gpio.rs  lib.rs  spi.rs  uart.rs
scripts/: bausteinsicht-container.sh  collect_results.py  generate_reports.py  install.sh  junit_to_sonar_generic.py  report.sh  setup-dev.sh  test.sh
tests/: conftest.py  requirements-dev.txt
tooling/: bausteinsicht.sh  build_adoc.sh  generate_arch.py  generate_reports.py  report.sh  req_tracing_summary.py  shellcheck_to_sarif.py  trend_summary.py
(+111 files in other folders)
